--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Android1_homeWork2</string>
+    <string name="app_name">Android!_homeWork2</string>
     <string name="Welcome">Добро пожаловать!</string>
     <string name="welcome2">Выполните вход или зарегестрируйтесь</string>
     <string name="email">Введите вашу почту</string>
